[package]
name = "monitoring-api"
version = "0.1.0"
authors = ["Aymen Hamada <aymenhamada@epitech.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
prometheus = "0.13.3"
actix-web-prom = "0.6.0"
systemstat = "0.2.3"
futures-util = "0.3.23"

